did the homework